# monometis

./: .gitmodules  README.md
launcher/: launch_gripper.sh  launch_robot.sh
launcher/conf/: gripper_launch.yaml  robot_launch.yaml  sim_launch.yaml
launcher/conf/gripper/: robotiq_2f.yaml
launcher/conf/robot_client/: franka_oncorr_hardware.yaml
polymetis/: CMakeLists.txt  environment.yml  environment_cpu.yml
polymetis/python/polymetis/: _version.py  robot_interface.py
polymetis/python/polymetis/robot_client/: executable_robot_client.py
polymetis/python/polymetis/robot_drivers/psyonic_gripper/ability-hand-api/: .gitignore
polymetis/python/polymetis/robot_drivers/psyonic_gripper/ability-hand-api/demo/: i2c-master-test.c  main.c
polymetis/python/polymetis/robot_drivers/psyonic_gripper/ability-hand-api/python/psyonic-ability-hand/: README.md  hand-demo.sh  pyproject.toml  requirements.txt  setup.py
polymetis/python/polymetis/robot_drivers/psyonic_gripper/ability-hand-api/python/psyonic-ability-hand/src/psyonic_ability_hand/: __init__.py  hand-demo.py  hand-grasp-test.py  hand-mt-test.py  hand.py  io.py  serial-loop.py
polymetis/python/polymetis/robot_drivers/psyonic_gripper/ability-hand-api/python/psyonic-ability-hand/tests/: test_grip.py  test_psyonic_ability_hand.py
polymetis/python/scripts/: launch_robot.py
scripts/: build_libfranka.sh
